[package]
name = "atlas"
description = "Texture atlas generation (guillotine with dynamic resizing.)"
keywords = ["texture", "atlas", "sprite", "stitching", "packing"]
repository = "https://github.com/quadrupleslap/atlas"
documentation = "https://docs.rs/atlas"
license = "MIT"
version = "0.3.0"
authors = ["Ram <quadrupleslap@gmail.com>"]

[dependencies]
framing = "0.6"

[dev-dependencies]
rand = "0.3"
png-framing = "0.5"
